# space-ambient

./: CMakeLists.txt  README.md  build.sh
cmake/: GenerateAudioHeaders.cmake  deb_postinst  deb_prerm  genaudio.h.in  postinst  prerm
data/: Ambient.oga  space-ambient1.oga  space-ambient2.oga  space-ambient3.oga  space-ambient4.oga  space-ambient5.oga
service/: space-ambient.service.in
src/: main.cpp
